tests/NormalTests/paczka1/fuzzy1/27289166.err
Error in line 14: brmB3jf S132 63,8
Error in line 10: cDsw A666 20,8
Error in line 29: A666 A101 95,5
Error in line 24: qS4 A101 4,7
Error in line 21: Ljc S132 148,0
Error in line 39: Ljc A426 10,75
